; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/esp8266/extr_esp_crypto.c_mg_hash_md5_v.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/esp8266/extr_esp_crypto.c_mg_hash_md5_v.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_hash_md5_v(i64 %0, i32** %1, i64* %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  store i64 %0, i64* %5, align 8
  store i32** %1, i32*** %6, align 8
  store i64* %2, i64** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i32**, i32*** %6, align 8
  %11 = load i64*, i64** %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @md5_vector(i64 %9, i32** %10, i64* %11, i32* %12)
  ret void
}

declare dso_local i32 @md5_vector(i64, i32**, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
